--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Responsive Form</title>
 </head>
 <body>
-    <div id="form">
+  <form>
 <label for="name">Name:</label>
 <input id="name" type="text" placeholder="Enter your name"><br>
   <br>
@@ -68,6 +68,6 @@
   <br>
 <label>Date and time of filling this form:</label>
 <input type="datetime-local" >
-</div>
+</form>
 </body>
 </html>
